syntax = "proto3";

package transaction;

option go_package = "ShoeStore/transaction-service/proto";

message CartItem {
  string sneaker_id = 1;
  int32 quantity = 2;
}

message Transaction {
  string id = 1;
  string transaction_id = 2;
  string user_id = 3;
  repeated CartItem cart_items = 4;
  double total_amount = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateTransactionRequest {
  Transaction transaction = 1;
}

message CreateTransactionResponse {
  Transaction transaction = 1;
}

message GetTransactionRequest {
  string id = 1;
}

message GetTransactionResponse {
  Transaction transaction = 1;
}

message UpdateTransactionStatusRequest {
  string id = 1;
  string status = 2;
}

message UpdateTransactionStatusResponse {
  Transaction transaction = 1;
}

message DeleteTransactionRequest {
  string id = 1;
}

message DeleteTransactionResponse {
  bool success = 1;
}

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  rpc UpdateTransactionStatus(UpdateTransactionStatusRequest) returns (UpdateTransactionStatusResponse);
  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse);
}
